# polynomial-curve-fitting

./: CMakeLists.txt
doc/: report.tex
src/: CMakeLists.txt  experiment.cpp  experiment.h  generator.h  main.cpp  model.cpp  model.h  normal-distribution-generator.cpp  normal-distribution-generator.h  polyfit-model.cpp  polyfit-model.h  sine-wave-experiment.cpp  sine-wave-experiment.h
